# tiny_embed

./: Cargo.toml  LICENSE  README.md
src/: lib.rs  main.rs
